--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -3,7 +3,8 @@
     align-items: center;
     justify-content: space-between;
     border-radius: 8px;
-    background-color: #414141;
+    flex-wrap: wrap;
+    background-color: #310f50;
     padding: 1rem 2rem;
     margin-bottom: 0.5rem;
 }
@@ -13,6 +14,11 @@
     align-items: center;
     justify-content: center;
     gap: 0.5rem;
+}
+
+.card-buttons-delete {
+    background-color: red;
+    color: #FFF;
 }
 
 .done {
